Added viewing of characteristic properties and read. Reading works but doesn't get correctly updated in the UI yet. Notifications don't seem to work yet either

--- a/Android/ATTBLEGateway/app/src/main/res/layout/list_item_service.xml
+++ b/Android/ATTBLEGateway/app/src/main/res/layout/list_item_service.xml
@@ -6,11 +6,17 @@
 
     <TextView
         android:id="@+id/deviceService"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/deviceServiceUUID"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/deviceServiceType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
