--- a/Android/ATTBLEGateway/app/src/main/res/layout/list_item_characteristic.xml
+++ b/Android/ATTBLEGateway/app/src/main/res/layout/list_item_characteristic.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:padding="4dp"
     android:paddingStart="20dp"
+    android:paddingEnd="20dp"
     android:background="?android:attr/selectableItemBackground">
 
     <TextView
