--- a/Android/ATTBLEGateway/app/src/main/res/layout/list_item_characteristic.xml
+++ b/Android/ATTBLEGateway/app/src/main/res/layout/list_item_characteristic.xml
@@ -82,14 +82,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Write"/>
+                android:text="Write"
+                android:enabled="false"/>
         </LinearLayout>
 
-        <EditText
+        <TextView
             android:id="@+id/characteristicDetailValue"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"/>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="match_parent"
